--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
 version: '3.9'
 services:
   db:
-    image: kartoza/postgis:14-3.2
+    container_name: "db"
+    build:
+      context: .
+      dockerfile: Dockerfile-db
+    restart: always
     ports: 
-      - "25432:5432"
+      - "5432:5432"
     volumes:
-      - postgis-data:/var/lib/postgresql
+      - db:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: test
-      POSTGRES_DB: db
+      POSTGRES_PASSWORD: postgres
 
 volumes:
-  postgis-data:
+  db:
+    driver: local
 
